apollo-federation/src/sources/connect/expand/tests/snapshots/connectors@steelthread.graphql.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/steelthread.graphql
---
{
    "connectors_Query_users_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /users",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.users),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                https://jsonplaceholder.typicode.com/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/users",
                            location: 0..6,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "name",
                            ),
                            range: Some(
                                3..7,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..7,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
        error_settings: Some(
            ConnectorErrorsSettings {
                message: None,
                extensions: None,
            },
        ),
    },
    "connectors_Query_user_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /users/{$args.id}",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.user),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                https://jsonplaceholder.typicode.com/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/users/",
                            location: 0..7,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $args,
                                                range: Some(
                                                    0..5,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "id",
                                                        ),
                                                        range: Some(
                                                            6..8,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            8..8,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    5..8,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..8,
                                        ),
                                    },
                                },
                            ),
                            location: 8..16,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "name",
                            ),
                            range: Some(
                                3..7,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "username",
                            ),
                            range: Some(
                                8..16,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..16,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Explicit,
        ),
        spec: V0_1,
        request_variables: {
            $args,
        },
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
        error_settings: Some(
            ConnectorErrorsSettings {
                message: None,
                extensions: None,
            },
        ),
    },
    "connectors_User_d_1": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /users/{$this.c}",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(User.d),
                    directive_name: "connect",
                    directive_index: 1,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                https://jsonplaceholder.typicode.com/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/users/",
                            location: 0..7,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $this,
                                                range: Some(
                                                    0..5,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "c",
                                                        ),
                                                        range: Some(
                                                            6..7,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            7..7,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    5..7,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..7,
                                        ),
                                    },
                                },
                            ),
                            location: 8..15,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Path(
            PathSelection {
                path: WithRange {
                    node: Var(
                        WithRange {
                            node: $,
                            range: Some(
                                0..1,
                            ),
                        },
                        WithRange {
                            node: Key(
                                WithRange {
                                    node: Field(
                                        "phone",
                                    ),
                                    range: Some(
                                        2..7,
                                    ),
                                },
                                WithRange {
                                    node: Empty,
                                    range: Some(
                                        7..7,
                                    ),
                                },
                            ),
                            range: Some(
                                1..7,
                            ),
                        },
                    ),
                    range: Some(
                        0..7,
                    ),
                },
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_1,
        request_variables: {
            $this,
        },
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
        error_settings: Some(
            ConnectorErrorsSettings {
                message: None,
                extensions: None,
            },
        ),
    },
}
