apollo-federation/src/sources/connect/expand/tests/snapshots/connectors@types_used_twice.graphql.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/types_used_twice.graphql
---
{
    "connectors_Query_ts_0": Connector {
        id: ConnectId {
            label: "connectors.example http: GET /",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.ts),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                http://example/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/",
                            location: 0..1,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
            origin: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "a",
                            ),
                            range: Some(
                                0..1,
                            ),
                        },
                        Some(
                            SubSelection {
                                selections: [
                                    Field(
                                        None,
                                        WithRange {
                                            node: Field(
                                                "id",
                                            ),
                                            range: Some(
                                                4..6,
                                            ),
                                        },
                                        None,
                                    ),
                                ],
                                range: Some(
                                    2..8,
                                ),
                            },
                        ),
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "b",
                            ),
                            range: Some(
                                9..10,
                            ),
                        },
                        Some(
                            SubSelection {
                                selections: [
                                    Field(
                                        None,
                                        WithRange {
                                            node: Field(
                                                "a",
                                            ),
                                            range: Some(
                                                13..14,
                                            ),
                                        },
                                        Some(
                                            SubSelection {
                                                selections: [
                                                    Field(
                                                        None,
                                                        WithRange {
                                                            node: Field(
                                                                "id",
                                                            ),
                                                            range: Some(
                                                                17..19,
                                                            ),
                                                        },
                                                        None,
                                                    ),
                                                ],
                                                range: Some(
                                                    15..21,
                                                ),
                                            },
                                        ),
                                    ),
                                ],
                                range: Some(
                                    11..23,
                                ),
                            },
                        ),
                    ),
                ],
                range: Some(
                    0..23,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
    },
}
